--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jest": "^29.5.0",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "supertest": "^6.3.3"
