--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "chai": "^4.3.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.2.0",
-    "morgan": "^1.10.0",
-    "supertest": "^6.3.3"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0",
+    "chai": "^4.3.7",
+    "supertest": "^6.3.3"
   }
 }
