--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.2.0",
+    "stripe": "^8.174.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
