--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommercemongo",
-  "version": "1.0.0",
+  "version": "v1.0.0-alpha",
   "description": "",
   "main": "index.js",
   "type": "module",
