--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^8.9.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
