--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Install Newman
         run: npm install -g newman
 
       - name: Run Postman tests
-        run: newman run "/github/workspace/.github/workflows/v1.0.0-alpha.postman_collection.json"
+        run: newman run "/github/workspace/path/to/v1.0.0-alpha.postman_collection.json"
