--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16, 18]
+        node-version: 16
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
